update swagger file
